--- a/shop.html
+++ b/shop.html
@@ -62,12 +62,14 @@ body {
 
 <center><h1 id="outline"><font face="Courier New"><font size="9"><b>Kits</b></font></font></h1></center>
 <center><p id="outline"><font face="Courier New"><font size="5"><b>Stock May Not Be Up To Date!</b></font></font></p></center>
+<center><p id="outline"><font face="Courier New"><font size="5"><b>Stock Will Be Slow Because I Recently Died And Lost My Stuff</b></font></font></p></center>
+
 
 <br><br><h2 id="outline"><center><font size = "7" face="Trebuchet MS" color = "#00f0ff"><u>Food</u></font></center></h2>
 
 <h2 id="outline"><center><font size = "5" face="Trebuchet MS">Lunchbox V1</font></center></h2>
 <center><img src="kits/LunchboxV1.png"></center>
-<h2 id="outline"><center><font size = "4" face="Trebuchet MS" color = "#ff0000">0 In Stock</font></center></h2>
+<h2 id="outline"><center><font size = "4" face="Trebuchet MS" color = "#0000ff">1 In Stock</font></center></h2>
 <h2 id="outline"><center><font size = "5" face="Trebuchet MS">Price: 12 Diamonds</font></center></h2> <br><br>
 
 <br><br><h2 id="outline"><center><font size = "7" face="Trebuchet MS" color = "#00f0ff"><u>Gear</u></font></center></h2>
