--- a/shop.html
+++ b/shop.html
@@ -69,7 +69,7 @@ body {
 
 <h2 id="outline"><center><font size = "5" face="Trebuchet MS">Lunchbox V1</font></center></h2>
 <center><img src="kits/LunchboxV1.png"></center>
-<h2 id="outline"><center><font size = "4" face="Trebuchet MS" color = "#0000ff">1 In Stock</font></center></h2>
+<h2 id="outline"><center><font size = "4" face="Trebuchet MS" color = "#00ff00">1 In Stock</font></center></h2>
 <h2 id="outline"><center><font size = "5" face="Trebuchet MS">Price: 12 Diamonds</font></center></h2> <br><br>
 
 <br><br><h2 id="outline"><center><font size = "7" face="Trebuchet MS" color = "#00f0ff"><u>Gear</u></font></center></h2>
