--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@ body {
 <div class="topnav">
   <a class="active" href="index.html"><font face = "Tahoma"><b>[Home]</b></font></a>
   <a href="shop.html"><font face = "Tahoma"><b>[Kit Shop]</b></font></a>
+  <a href="prototypes.html"><font face = "Tahoma"><b>[Prototype Kits]</b></font></a>
 </div>
 
 <center><h1 id="outline"><font face="Courier New"><font size="9"><b>The Chest</b></font></font></h1></center>
