--- a/shop.html
+++ b/shop.html
@@ -103,7 +103,7 @@ display:flex;
 <div>
 <h2 id="outline"><center><font size = "5" face="Trebuchet MS">Exploration Kit V1 (COMPASSES CHANGED TO 16)</font></center></h2>
 <center><img src="kits/ExplorationKitV1.png"></center>
-<h2 id="outline"><center><font size = "4" face="Trebuchet MS" color = "#ff0000">0 In Stock</font></center></h2>
+<h2 id="outline"><center><font size = "4" face="Trebuchet MS" color = "#00ff00">1 In Stock</font></center></h2>
 <h2 id="outline"><center><font size = "5" face="Trebuchet MS">Price: 20 Diamonds</font></center></h2> <br><br>
 </div>
 
