--- a/shop.html
+++ b/shop.html
@@ -135,7 +135,7 @@ display:flex;
 <div>
 <h2 id="outline"><center><font size = "5" face="Trebuchet MS">Garden Kit V1</font></center></h2>
 <center><img src="kits/GardenKitV1.png"></center>
-<h2 id="outline"><center><font size = "4" face="Trebuchet MS" color = "#ff0000">0 In Stock</font></center></h2>
+<h2 id="outline"><center><font size = "4" face="Trebuchet MS" color = "#00ff00">1 In Stock</font></center></h2>
 <h2 id="outline"><center><font size = "5" face="Trebuchet MS">Price: 10 Diamonds</font></center></h2> <br><br>
 </div>
 
