--- a/index.html
+++ b/index.html
@@ -5,6 +5,22 @@
 </head>
 <style>
 
+.parent {
+display: grid;
+grid-template-columns: repeat(4, 1fr);
+grid-template-rows: ;
+grid-column-gap: 0px;
+grid-row-gap: 0px;
+}
+
+.parenta {
+display: grid;
+grid-template-columns: repeat(2, 1fr);
+grid-template-rows: ;
+grid-column-gap: 0px;
+grid-row-gap: 0px;
+}
+
 a:link {
   color: #0096FF;
   background-color: transparent;
@@ -32,6 +48,12 @@ body {
   background-color: #80808088;
 }
 
+. container{
+
+display:flex;
+
+}
+
 .topnav a {
   float: left;
   color: #cccccc;
@@ -56,20 +78,90 @@ body {
 </style>
 
 <div class="topnav">
-  <a class="active" href="index.html"><font face = "Tahoma"><b>[Home]</b></font></a>
-  <a href="shop.html"><font face = "Tahoma"><b>[Kit Shop]</b></font></a>
+  <a class="active" href="index.html"><font face = "Tahoma"><b>[Kit Shop]</b></font></a>
   <a href="prototypes.html"><font face = "Tahoma"><b>[Prototype Kits]</b></font></a>
 </div>
 
-<center><h1 id="outline"><font face="Courier New"><font size="9"><b>The Chest</b></font></font></h1></center>
+<center><h1 id="outline"><font face="Courier New"><font size="9"><b>Kits</b></font></font></h1></center>
+<center><p id="outline"><font face="Courier New"><font size="5"><b>Stock May Not Be Up To Date!</b></font></font></p></center>
+<center><p id="outline"><font face="Courier New"><font size="5"><b>Stock Will Be Slow Because I Recently Died And Lost My Stuff</b></font></font></p></center>
 
-<br>
+<br><h2 id="outline"><center><font size = "7" face="Trebuchet MS" color = "#00f0ff"><u>Gear</u></font></center></h2>
 
-<h2 id="outline"><center><font size = "5" face="Trebuchet MS"><u>Updates</u><br>-New Treasure Hunt, Start Inside The Chest</font></center></h2>
+<div class="parent">
+<div>
+<h2 id="outline"><center><font size = "5" face="Trebuchet MS">Exploration Kit V1 (16 COMPASSES)</font></center></h2>
+<center><img src="kits/ExplorationKitV1.png"></center>
+<h2 id="outline"><center><font size = "4" face="Trebuchet MS" color = "#ff0000">0 In Stock</font></center></h2>
+<h2 id="outline"><center><font size = "5" face="Trebuchet MS">Price: 20 Diamonds</font></center></h2> <br><br>
+</div>
 
-<br><br>
+<div>
+<h2 id="outline"><center><font size = "5" face="Trebuchet MS">St_Vitus' Kit</font></center></h2>
+<center><img src="kits/StVitusKitV1.png"></center>
+<h2 id="outline"><center><font size = "4" face="Trebuchet MS" color = "#00ff00">2 In Stock</font></center></h2>
+<h2 id="outline"><center><font size = "5" face="Trebuchet MS">Price: 25 Diamonds</font></center></h2> <br><br>
+</div>
 
-<h2 id="outline"><center><p style"line-height:150%><p style="border:5px; border-style:solid; border-color:#ffffff; background-color:#000000;"><font size = "5" face="Trebuchet MS"><u><br>What Is The Chest?</u><br><br>The Chest is a shop in the mall on Javasurvival. If you don't know what Javasurvival is, then I'm not sure how you got here in the first place. All sorts of items are sold there, but more recently, plans have been made to sell kits. This website was made to make it easier to see what is in the kits.<br><br></font></p></p></center></h2>
+<div>
+<h2 id="outline"><center><font size = "5" face="Trebuchet MS">Nomad Kit V1</font></center></h2>
+<center><img src="kits/NomadKitV1.png"></center>
+<h2 id="outline"><center><font size = "4" face="Trebuchet MS" color = "#ff0000">0 In Stock</font></center></h2>
+<h2 id="outline"><center><font size = "5" face="Trebuchet MS">Price: 20 Diamonds</font></center></h2> <br><br>
+</div>
+
+<div>
+<h2 id="outline"><center><font size = "5" face="Trebuchet MS">PvP Kit V2</font></center></h2>
+<center><img src="kits/PVPKitV2.png"></center>
+<h2 id="outline"><center><font size = "4" face="Trebuchet MS" color = "#ff0000">0 In Stock</font></center></h2>
+<h2 id="outline"><center><font size = "5" face="Trebuchet MS">Price: 15 Diamonds</font></center></h2> <br><br>
+</div>
+</div>
+
+<br><h2 id="outline"><center><font size = "7" face="Trebuchet MS" color = "#00f0ff"><u>Limited Kits</u></font></center></h2>
+
+<div>
+<h2 id="outline"><center><font size = "5" face="Trebuchet MS">Limited V1</font></center></h2>
+<center><img src="kits/LimitedV1.png"></center>
+<h2 id="outline"><center><font size = "4" face="Trebuchet MS" color = "#00ff00">4 In Stock</font></center></h2>
+<h2 id="outline"><center><font size = "5" face="Trebuchet MS">Price: 14</font></center></h2> <br><br>
+</div>
+
+<br><h2 id="outline"><center><font size = "7" face="Trebuchet MS" color = "#00f0ff"><u>Utility</u></font></center></h2>
+
+<div class="parenta">
+<div>
+<h2 id="outline"><center><font size = "5" face="Trebuchet MS">Garden Kit V1</font></center></h2>
+<center><img src="kits/GardenKitV1.png"></center>
+<h2 id="outline"><center><font size = "4" face="Trebuchet MS" color = "#00ff00">1 In Stock</font></center></h2>
+<h2 id="outline"><center><font size = "5" face="Trebuchet MS">Price: 10 Diamonds</font></center></h2> <br><br>
+</div>
+
+<div>
+<h2 id="outline"><center><font size = "5" face="Trebuchet MS">Decor Kit V1</font></center></h2>
+<center><img src="kits/DecorKitV1.png"></center>
+<h2 id="outline"><center><font size = "4" face="Trebuchet MS" color = "#ff0000">0 In Stock</font></center></h2>
+<h2 id="outline"><center><font size = "5" face="Trebuchet MS">Price: 15 Diamonds</font></center></h2> <br><br>
+</div>
+</div>
+
+<br><h2 id="outline"><center><font size = "7" face="Trebuchet MS" color = "#00f0ff"><u>Extra</u></font></center></h2>
+
+<div class="parenta">
+<div>
+<h2 id="outline"><center><font size = "5" face="Trebuchet MS">Lunchbox V1</font></center></h2>
+<center><img src="kits/LunchboxV1.png"></center>
+<h2 id="outline"><center><font size = "4" face="Trebuchet MS" color = "#ff0000">0 In Stock</font></center></h2>
+<h2 id="outline"><center><font size = "5" face="Trebuchet MS">Price: 12 Diamonds</font></center></h2> <br><br>
+</div>
+
+<div>
+<h2 id="outline"><center><font size = "5" face="Trebuchet MS">Glitched Skeleton Gear (0 Durability)</font></center></h2>
+<center><img src="kits/GlitchedSkeletonGearV1.png"></center>
+<h2 id="outline"><center><font size = "4" face="Trebuchet MS" color = "#ff0000">0 In Stock (There will be 0 for a while)</font></center></h2>
+<h2 id="outline"><center><font size = "5" face="Trebuchet MS">Price: Undecided</font></center></h2> <br><br>
+</div>
+</div>
 
 </body>
 </html>
