--- a/prototypes.html
+++ b/prototypes.html
@@ -74,8 +74,7 @@ body {
 </style>
 
 <div class="topnav">
-  <a href="index.html"><font face = "Tahoma"><b>[Home]</b></font></a>
-  <a href="shop.html"><font face = "Tahoma"><b>[Kit Shop]</b></font></a>
+  <a href="index.html"><font face = "Tahoma"><b>[Kit Shop]</b></font></a>
   <a class="active" href="prototypes.html"><font face = "Tahoma"><b>[Prototype Kits]</b></font></a>
 </div>
 
