--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ display:flex;
 <h2 id="outline"><center><font size = "5" face="Trebuchet MS">Limited V1</font></center></h2>
 <center><img src="kits/LimitedV1.png"></center>
 <h2 id="outline"><center><font size = "4" face="Trebuchet MS" color = "#00ff00">4 In Stock</font></center></h2>
-<h2 id="outline"><center><font size = "5" face="Trebuchet MS">Price: 14</font></center></h2> <br><br>
+<h2 id="outline"><center><font size = "5" face="Trebuchet MS">Price: 14 Diamonds</font></center></h2> <br><br>
 </div>
 
 <br><h2 id="outline"><center><font size = "7" face="Trebuchet MS" color = "#00f0ff"><u>Utility</u></font></center></h2>
